Resolves: tdf#152593 reuse Line Style preview code for Line Width preview

Change-Id: I842b3bfaeb63978377ebb3edaef4dfd94ec296a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144651
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>