include/svx/xtable.hxx
@@ -273,7 +273,7 @@ private:
     OUString            maStringSolidLine;
     OUString            maStringNoLine;
 
-    static BitmapEx ImpCreateBitmapForXDash(const XDash* pDash);
+    static double ImpGetDefaultLineThickness();
     virtual BitmapEx CreateBitmapForUI(tools::Long nIndex) override;
 
 public:
@@ -290,6 +290,8 @@ public:
     // creates a bitmap fitting in size and style to the ones you get by
     // using GetUiBitmap for existing entries.
     BitmapEx const & GetBitmapForUISolidLine() const;
+
+    static BitmapEx CreateBitmapForXDash(const XDash* pDash, double fLineThickness);
 
     // Special calls to get the translated strings for the UI entry for no
     // line style (XLINE_NONE) and solid line style (XLINE_SOLID) for dialogs
